syntax = "proto3";
package testevents.protobuf;
import "google/protobuf/timestamp.proto";

message TestEvent {
    bytes id = 1;
    string name = 2;
    double x = 3;
    double y = 4;
    double z = 5;
    google.protobuf.Timestamp timeStamp = 6;
}